--- a/_sources/project.ipynb
+++ b/_sources/project.ipynb
@@ -48,7 +48,7 @@
     "Latex math block:\n",
     "\n",
     "$$\n",
-    "\\arg\\min\\limits_{\\textbf{a}}  ||\\textbf{y} − \\textbf{Xa}||_2^2 + ||\\textbf{a}||_2^2\n",
+    "\\arg\\min\\limits_{\\textbf{a}}  ||\\textbf{y} − \\textbf{Xa}||_2^2 + \\lambda||\\textbf{a}||_2^2\n",
     "$$\n",
     "\n",
     "<!-- Check out here if you'd like the equations numbered: https://jupyterbook.org/en/stable/content/math.html -->\n",
